# PolyMarketGeopolitical

./: .gitignore  README.md  generate_extra_plots.py  pyproject.toml  run_geopolitical_agents.py  run_research_pipeline.py  run_spike_pipeline.py
cli/: main.py  models.py  utils.py
geopolitical_agents/: __init__.py  clients.py  config.py  context.py  orchestrator.py  schemas.py
research_outputs/geopolitical_agents/: 2020-06-15_LMT_geopolitical_roundtable.json  2020-06-15_LMT_geopolitical_roundtable.md
research_outputs/tables/: diebold_mariano_results.csv  evaluation_metrics.csv  event_study.csv  model_comparison.csv  regime_model_comparison.csv  rolling_predictions.csv  selected_polymarket_markets.csv  shap_importance.csv  spike_bootstrap_results.csv  spike_event_study.csv  spike_model_comparison.csv  spike_predictions.csv  spike_regime_comparison.csv  spike_regime_train_comparison.csv  spike_shap_importance.csv  test_predictions.csv
research_outputs/text/: data_manifest.json  final_summary.txt  geopolitical_agents_prototype.md  interpretation.json  interpretation.txt  methodology_and_findings.md  run_manifest.json  spike_final_summary.txt  spike_manifest.json
research_pipeline/: __init__.py  config.py  data.py  data_loading.py  evaluation.py  feature_engineering.py  features.py  modeling.py  models.py  pipeline.py  pipeline_v2.py  plot_extras.py  spike_evaluation.py  spike_feature_engineering.py  spike_models.py  spike_pipeline.py
tradingagents/agents/: __init__.py
tradingagents/graph/: conditional_logic.py  propagation.py  setup.py
(+6 files in other folders)
