[project]
name = "poly-data"
version = "0.1.0"
description = "A comprehensive data pipeline for fetching, processing, and analyzing Polymarket trading data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Warproxxx", email = "" }
]

dependencies = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "requests>=2.31.0",
    "gql[requests]>=3.4.0",
    "flatten-json>=0.1.13",
    "scikit-learn>=1.3.2",
    "xgboost>=2.1.4",
    "shap>=0.44.1",
    "yfinance>=1.2.0",
    "pandas-datareader>=0.10.0",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "scipy>=1.10.1",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "lightgbm>=4.6.0",
    "pypdf>=5.9.0",
    "statsmodels>=0.14.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly_utils", "update_utils", "research_pipeline", "geopolitical_agents"]

[tool.uv]
dev-dependencies = []
